u content, cluster, style for assess coding

--- a/css/cluster.css
+++ b/css/cluster.css
@@ -32,6 +32,14 @@
 	color: white;
 	background: #728a61;
 }
+/* .assessments.cluster main section:first-child{
+	background: linear-gradient(to left top, #fff 50%, #728a61 50%);
+}
+.assessments.cluster main section h2,
+.assessments.cluster main section h3{
+	color: white;
+	background: #728a61;
+} */
 .about.cluster main section:first-child{
 	background: linear-gradient(to left top, #fff 50%, #757575 50%);
 }
