--- a/css/style.css
+++ b/css/style.css
@@ -141,8 +141,8 @@ body{
 	width: 100%;
 	max-width: 1366px;
 	overflow-x: hidden;
-	-moz-osx-font-smoothing: auto;
-	-webkit-font-smoothing: antialiased;
+	/* -moz-osx-font-smoothing: auto;
+	-webkit-font-smoothing: antialiased; */
 }
 @media only screen and (min-width: 480px){
 	body{
