start setting up colors

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,22 @@ Dark Blue: #395375;
 Blue: #5378ac; (sections/carousel/images/nav0)
 */
 
+/* community edition colors
+Home/Links: #395375
+Zoomcasts: #cb6948
+Lesson Plans: #5378ac
+Syllabi: #728a61
+Assessments: 
+About: #757575
+
+first edition colors
+Home/Links: #3|95375
+Zoomcasts: #c|b6948
+Lesson Plans: #5|378ac
+Syllabi: #7|28a61
+Assessments
+About: #7|57575 */
+
 /** z-index **/
 /*
 .timeline-container:before = 1
