--- a/css/cluster.css
+++ b/css/cluster.css
@@ -33,12 +33,12 @@
 	background: #728a61;
 }
 /* .assessments.cluster main section:first-child{
-	background: linear-gradient(to left top, #fff 50%, #728a61 50%);
+	background: linear-gradient(to left top, #fff 50%, #8338EC 50%);
 }
 .assessments.cluster main section h2,
 .assessments.cluster main section h3{
 	color: white;
-	background: #728a61;
+	background: #8338EC;
 } */
 .about.cluster main section:first-child{
 	background: linear-gradient(to left top, #fff 50%, #757575 50%);
