--- a/css/content.css
+++ b/css/content.css
@@ -25,7 +25,7 @@
 }
 /* .assessments.content header,
 .assessments.content main section.menu-container h3{
-	background: #728a61;
+	background: #8338EC;
 } */
 .about.content header,
 .about.content main section.menu-container h3{
