--- a/css/temp.css
+++ b/css/temp.css
@@ -247,7 +247,7 @@ h7{
 
 
 .cluster main section ul li {
-	border: 1px solid #E3E8E8;
+	border: 1px solid #E6EAEA;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
