--- a/css/cluster.css
+++ b/css/cluster.css
@@ -17,20 +17,20 @@
 	background: #6D3222;
 }
 .lesson-plans.cluster main section:first-child{
-	background: linear-gradient(to left top, #fff 50%, #154060 50%);
+	background: linear-gradient(to left top, #fff 50%, #20518D 50%);
 }
 .lesson-plans.cluster main section h2,
 .lesson-plans.cluster main section h3{
 	color: white;
-	background: #154060;
+	background: #20518D;
 }
 .syllabi.cluster main section:first-child{
-	background: linear-gradient(to left top, #fff 50%, #405943 50%);
+	background: linear-gradient(to left top, #fff 50%, #3C5D40 50%);
 }
 .syllabi.cluster main section h2,
 .syllabi.cluster main section h3{
 	color: white;
-	background: #405943;
+	background: #3C5D40;
 }
 /* .assessments.cluster main section:first-child{
 	background: linear-gradient(to left top, #fff 50%, #5A5849 50%);
@@ -100,7 +100,7 @@
 	text-align: center;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
-	border: 1px solid #171C1C;
+	border: 1px solid #222A2A;
 	border-radius: 5px;
 	margin: 0;
 	width: 100%;
@@ -183,7 +183,7 @@
 	font-weight: 600;
 	font-variant: normal;
 	color: #fff;
-	border-bottom: 1px solid #171C1C;
+	border-bottom: 1px solid #222A2A;
 	-webkit-border-radius: 4px 4px 0 0;
 	-moz-border-radius: 4px 4px 0 0;
 	border-radius: 4px 4px 0 0;
@@ -212,14 +212,14 @@
 /* ratio box used for content page images */ 
 /* adapted from https://pqina.nl/blog/presenting-images-in-an-aspect-ratio-with-css/ */
 .cluster main section div{
-	background: #E3E8E8;
+	background: #E6EAEA;
 	margin: 1rem;
 	padding: 0;
 	position: relative;
 }
 .cluster main section div:hover,
 .cluster main section div:focus-within{
-	outline: 3px solid #1F5B89;
+	outline: 3px solid #143D5D;
 	overflow: hidden;
 }
 /* adds specific ratio to ratio box */
@@ -255,7 +255,7 @@
 }
 /* the image for each cluster page slide */
 .cluster main section div img{
-	background: #E3E8E8;
+	background: #E6EAEA;
 	width: 100%;
   height: 100%;
 	position: absolute;
@@ -341,7 +341,7 @@
 }
 /* an item in the list of lesson plan buttons that appears on collective lesson plan slides */
 .cluster main section ul li{
-	border: 1px solid #E3E8E8;
+	border: 1px solid #E6EAEA;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -363,7 +363,7 @@
 	font-size: 1.1rem;
 	font-family: 'Source Serif Pro', serif;
 	font-weight: 600;
-	background: #E3E8E8;
+	background: #E6EAEA;
 	min-height: unset;
 }
 @media only screen and (min-width: 768px){
@@ -378,7 +378,7 @@
 .cluster main section ul li a,
 .cluster main section ul li a:visited{
 	text-decoration: none;
-	color: #171C1C;
+	color: #222A2A;
 	width: 100%;
 	height: 100%;
 	display: -webkit-flex;
@@ -398,7 +398,7 @@
 .cluster main section ul li:not(:first-child):hover a,
 .cluster main section ul li:not(:first-child):focus-within a{
 	color: white;
-	background: #1F5B89;
+	background: #143D5D;
 }
 
 
