--- a/css/content.css
+++ b/css/content.css
@@ -17,11 +17,11 @@
 }
 .lesson-plans.content header,
 .lesson-plans.content main section.menu-container h3{
-	background: #154060;
+	background: #20518D;
 }
 .syllabi.content header,
 .syllabi.content main section.menu-container h3{
-	background: #405943;
+	background: #3C5D40;
 }
 /* .assessments.content header,
 .assessments.content main section.menu-container h3{
@@ -213,7 +213,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 }
 /* header images for ratio box */
 .content main .aspect-ratio-box img {
-	background: #E3E8E8;
+	background: #E6EAEA;
 	width: 100%;
   height: 100%;
 	position: absolute;
@@ -266,7 +266,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 /* page title of all content pages */
 .content main h2{
 	font-size: 1.55rem;
-	color: #171C1C;
+	color: #222A2A;
 	margin: 1rem auto;
 }
 .content main h2#error404{
@@ -325,7 +325,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 }
 /* user guide section headings; used on lesson plan introductions such as /html/lesson_plans/searcole_caribbean_introduction.html */
 .content h3#user-guide{
-	color: #171C1C;
+	color: #222A2A;
 	text-align: left;
 }
 @media only screen and (min-width: 480px){
