--- a/css/index.css
+++ b/css/index.css
@@ -27,16 +27,16 @@
 .section-tiles ul li:nth-child(3) a span{
 	background: #3C5D40;
 }
-/* .section-tiles ul li:nth-child(4){
-	background: linear-gradient(to left top, #fff 50%, #5A5849 50%);
+.section-tiles ul li:nth-child(4){
+	background: linear-gradient(to left top, #fff 50%, #5E5936 50%);
 }
 .section-tiles ul li:nth-child(4) a span{
-	background: #5A5849;
-} */
-.section-tiles ul li:nth-child(4){
+	background: #5E5936;
+}
+.section-tiles ul li:nth-child(5){
 	background: linear-gradient(to left top, #fff 50%, #637474 50%);
 }
-.section-tiles ul li:nth-child(4) a span{
+.section-tiles ul li:nth-child(5) a span{
 	background: #637474;
 }
 .section-tiles ul li a:hover,
@@ -78,7 +78,7 @@
 @media only screen and (min-width: 480px){
 	.section-tiles ul li{
 		margin: .5rem;
-		flex: 1 1 calc(50% - 2rem)
+		flex: 0 1 calc(50% - 2rem)
 	}
 }
 @media only screen and (min-width: 992px){
